# atspkg

./: .ghc.environment.x86_64-linux-8.2.2  .ghc.environment.x86_64-linux-8.4.0.20180118  .gitattributes  .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  .weeder.yaml  CONTRIBUTING.md  DESIGN.md  EXAMPLES.md  Justfile  README.md  Setup.hs  TODO.md  appveyor.yml  ats-pkg.cabal  atspkg.dhall  cabal.project  cabal.project.cross  cabal.project.local  cabal.project.new  cabal.project.travis  config.dhall  stack.yaml
.atspkg/: .shake.database
_darcs/: hashed_inventory  index  tentative_hashed_inventory  tentative_pristine
app/: Main.hs
ats-format/: .travis.yml  CHANGELOG.md  README.md  Setup.hs  TODO.md  ats-format.cabal  stack.yaml
ats-format/app/: Main.hs
ats-format/man/: MANPAGE.md  atsfmt.1
ats-format/src/: Main.hs
ats-pkg/: CHANGELOG.md  EXAMPLES.md  PACKAGES.md  README.md  Setup.hs  TODO.md  ats-pkg.cabal  default.nix  poly-x86_64-unknown-linux  static.nix
ats-pkg/app/: Main.hs
ats-pkg/app/Language/ATS/Package/: Dhall.hs  Upgrade.hs
ats-pkg/dhall/: atslib.dhall  atspkg-prelude.dhall  config.dhall
ats-pkg/docs/: manual.tex
ats-pkg/include/: windows.h
ats-pkg/internal/: Quaalude.cpphs  Quaalude.hs
ats-pkg/internal/System/Process/: Ext.hs
ats-pkg/man/: MANPAGE.md  atspkg.1
ats-pkg/pkgs/: pkg-set.dhall
ats-pkg/shake-ats/src/Development/Shake/ATS/: Generate.hs  Type.hs
ats-pkg/src/: Quaalude.cpphs  Quaalude.hs
ats-pkg/src/Distribution/: ATS.hs
ats-pkg/src/Distribution/ATS/: Build.hs  Version.hs
ats-pkg/src/Language/ATS/: Package.hs
ats-pkg/src/Language/ATS/Package/: Build.hs  Compiler.hs  Config.hs  Debian.hs  Dependency.hs  Dhall.hs  Error.hs  Generic.hs  PackageSet.hs  Type.hs  Upgrade.hs
ats-pkg/src/System/Process/: Ext.hs
ats-pkg/test/data/hello-world/: atspkg.dhall
ats-pkg/test/data/hello-world/src/: hello-world.dats
bash/: install.sh  manpages  prof-install  upload
cdeps/: CHANGELOG.md  README.md  cabal.project.local  cdeps.cabal
cdeps/app/: Main.hs
cdeps/bench/: Bench.hs
cdeps/src/Language/C/: Dependency.x
cdeps/test/: Spec.hs
dependency/: CHANGELOG.md  README.md  TODO.md  dependency.cabal
dependency/app/: Main.hs
dependency/bench/: Bench.hs
dependency/src/Data/: Dependency.hs
dependency/src/Data/Dependency/: Error.hs  Sort.hs  Type.hs
dependency/test/: Spec.hs
dhall/: atslib.dhall  atspkg-prelude.dhall  config.dhall  default-bin.dhall  default-lib.dhall  default-pkg.dhall  default-stalib.dhall  default.dhall  dhall-version.dhall  hackage-pkg.dhall  make-pkg-descr.dhall  make-pkg.dhall  map-plain-deps.dhall  plain-deps.dhall
docs/: manual.out  manual.tex
hs2ats/: .hspec-failures  CHANGELOG.md  README.md  TODO.md  hs2ats.cabal
hs2ats/app/: Main.hs
hs2ats/bench/: Bench.hs
hs2ats/src/Language/ATS/: Generate.hs
hs2ats/src/Language/ATS/Generate/: Error.hs
hs2ats/test/: Spec.hs
hs2ats/test/data/: HigherOrder.hs  HigherOrder.out  Newtype.hs  Newtype.out  Option.hs  Option.out  Pair.hs  Pair.out  SumType.hs  SumType.out
language-ats/: CHANGELOG.md  README.md  TODO.md  language-ats.cabal
language-ats/bench/: Bench.hs
language-ats/src/Language/: ATS.hs
language-ats/src/Language/ATS/: Lexer.x  Parser.y  PrettyPrint.hs  Rewrite.hs  Types.hs
language-ats/src/Language/ATS/Types/: Lens.hs
language-ats/test/: Spec.hs
language-ats/test/data/: array-literal.out  array.dats  array.out  arrptr.dats  ats-generic.dats  ats-generic.out  cli.dats  cli.out  cloref.out  combinatorics.dats  combinatorics.out  concurrency.dats  concurrency.out  crc32.dats  crc32.out  dhall-ats.out  dirwalk.dats  dirwalk.out  dlist.out  dlist.sats  either.out  either.sats  fact.dats  fact.out  factorial.dats  factorial.out  fast-combinatorics.dats  fast-combinatorics.out  fastcount.dats  fastcount.out  fib-thm.dats  fib-thm.out  fib.dats  fib.out  filecount.dats  filecount.out  filetype.out  filetype.sats  finger-tree.out  finger-tree.sats  (+45 more)
language-ats/test/data/stdlib/: arith_prf.out  arith_prf.sats  array.out  array.sats  arrayref.out  arrayref.sats  basics_dyn.out  basics_gen.out  checkast.out  checkast.sats  filebas.out  filebas.sats  gnumber.out  gnumber.sats  gorder.out  gorder.sats  integer_fixed.out  integer_fixed.sats  integer_long.out  integer_long.sats  integer_ptr.out  integer_ptr.sats  integer_short.out  integer_short.sats  integer_size.out  integer_size.sats  intrange.out  intrange.sats  option_vt.out  option_vt.sats  unsafe.out  unsafe.sats
language-ats/test/data/stdlib/DATS/: bool.dats  bool.out  integer_fixed.dats  integer_fixed.out  integer_long.dats  integer_long.out  integer_ptr.dats  integer_ptr.out  integer_short.dats  integer_short.out  integer_size.dats  integer_size.out
man/: MANPAGE.md  atspkg.1
pkgs/: ATS2-Postiats-0.3.10.tar.gz.REMOVED.git-id  ATS2-Postiats-0.3.6.tar.gz.REMOVED.git-id  ATS2-Postiats-0.3.7.tar.gz.REMOVED.git-id  ATS2-Postiats-0.3.8.tar.gz.REMOVED.git-id  ATS2-Postiats-0.3.9.tar.gz.REMOVED.git-id  README.md  ats2-postiats-0.3.8-prelude.dhall  atscntrb-concurrency-0.1.0.dhall  atscntrb-concurrency.dhall  atscntrb-curl.dhall  atscntrb-fast-arithmetic-0.3.2.0.dhall  atscntrb-fast-arithmetic.dhall  atscntrb-hs-intinf-1.0.6.dhall  atscntrb-hx-cstream.dhall  atscntrb-hx-divideconquer.dhall  atscntrb-hx-divideconquerpar.dhall  atscntrb-hx-find-cli.dhall  atscntrb-hx-fworkshop.dhall  (+18 more)
shake-ats/: .travis.yml  CHANGELOG.md  README.md  appveyor.yml  shake-ats.cabal
shake-ats/src/Development/Shake/: ATS.hs
shake-ats/src/Development/Shake/ATS/: Environment.hs  Generate.hs  Rules.hs  Type.hs
shake-c/: CHANGELOG.md  README.md  shake-c.cabal
shake-c/src/Development/Shake/: C.hs
shake-cabal/: CHANGELOG.md  README.md  shake-cabal.cabal
shake-cabal/src/Development/Shake/: Cabal.hs
shake-cabal/src/Development/Shake/Cabal/: Oracles.hs
shake-ext/: 1  README.md  shake-ext.cabal
shake-ext/.shake/: .shake.database
shake-ext/src/Development/Shake/: C.hs  CCJS.hs  Cabal.hs  Check.hs  Clean.hs  Elm.hs  FileDetect.hs  Linters.hs  Literate.hs  Man.hs  TH.hs  Version.hs
(+794 files in other folders)
