name:                ats-pkg
version:             2.2.0.11
synopsis:            Package manager for ATS
description:         A collection of scripts to simplify building ATS projects.
homepage:            https://github.com/vmchale/atspkg#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2018 Vanessa McHale
category:            Development
build-type:          Custom
extra-doc-files:     README.md
                   , docs/manual.tex
extra-source-files:  stack.yaml
                   , man/atspkg.1
cabal-version:       1.18

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

custom-setup
  setup-depends:     base
                   , Cabal >= 2.0
                   , cli-setup >= 0.2.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Language.ATS.Package.Exec
                     , Language.ATS.Package
  other-modules:       Paths_ats_pkg
                     , Language.ATS.Package.Error
                     , Language.ATS.Package.Type
                     , Language.ATS.Package.Dependency
                     , Language.ATS.Package.Compiler
                     , Language.ATS.Package.Build
                     , Language.ATS.Package.Upgrade
                     , Language.ATS.Package.Tools
  build-depends:       base >= 4.7 && < 5
                     , http-client
                     , filemanip
                     , bytestring
                     , shake
                     , tar
                     , zlib
                     , http-client-tls
                     , text
                     , directory
                     , process
                     , parallel-io
                     , unix
                     , lens
                     , dhall
                     , shake-ats >= 1.3.0.0
                     , shake-ext >= 2.3.0.0
                     , composition-prelude >= 1.1.0.2
                     , optparse-applicative
                     , temporary
                     , ansi-wl-pprint
                     , binary
                     , dependency
                     -- , lzma
                     -- , bzlib
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

executable atspkg
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ats-pkg
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

source-repository head
  type:     git
  location: git@github.com:vmchale/atspkg.git
