name:                ats-pkg
version:             2.4.1.0
synopsis:            A build tool for ATS
description:         A collection of scripts to simplify building ATS projects.
homepage:            https://github.com/vmchale/atspkg#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2018 Vanessa McHale
category:            Development, ATS
build-type:          Custom
extra-doc-files:     README.md
                   , docs/manual.tex
extra-source-files:  stack.yaml
                   , man/atspkg.1
                   , config.dhall
cabal-version:       1.18

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

custom-setup
  setup-depends:     base
                   , Cabal >= 2.0
                   , cli-setup >= 0.2.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Language.ATS.Package.Exec
                     , Language.ATS.Package
  other-modules:       Paths_ats_pkg
                     , Language.ATS.Package.Error
                     , Language.ATS.Package.Type
                     , Language.ATS.Package.Dependency
                     , Language.ATS.Package.Compiler
                     , Language.ATS.Package.Build
                     , Language.ATS.Package.Upgrade
                     , Language.ATS.Package.Config
                     , Language.ATS.Package.PackageSet
                     , Language.ATS.Package.Dhall
                     , Quaalude
  build-depends:       base >= 4.7 && < 5
                     , http-client
                     , bytestring
                     , file-embed
                     , shake
                     , bzlib
                     , lzma
                     , tar
                     , zlib
                     , http-client-tls
                     , text
                     , directory
                     , process
                     , containers
                     , parallel-io
                     , unix
                     , lens
                     , dhall
                     , ansi-wl-pprint
                     , shake-ats >= 1.3.0.0
                     , shake-ext >= 2.3.0.0
                     , composition-prelude >= 1.1.0.2
                     , optparse-applicative
                     , zip-archive
                     , temporary
                     , ansi-wl-pprint
                     , binary
                     , dependency
                     , ats-setup
  build-tools:         cpphs
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

executable atspkg
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ats-pkg
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Werror
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

source-repository head
  type:     git
  location: git@github.com:vmchale/atspkg.git
