cabal-version:      1.18
name:               ats-format
version:            0.2.0.32
license:            BSD3
license-file:       LICENSE
copyright:          Copyright: (c) 2017-2019 Vanessa McHale
maintainer:         vamchale@gmail.com
author:             Vanessa McHale
synopsis:           A source-code formatter for ATS
description:
    An opinionated source-code formatter for [ATS](http://www.ats-lang.org/).

category:           Parser, Language, ATS, Development
build-type:         Custom
extra-source-files:
    man/atsfmt.1
    .atsfmt.toml

extra-doc-files:
    README.md
    CHANGELOG.md

source-repository head
    type:     darcs
    location: https://hub.darcs.net/vmchale/ats

custom-setup
    setup-depends:
        base -any,
        Cabal -any,
        cli-setup >=0.1.0.2,
        filepath -any

flag development
    description: Enable `-Werror`
    default:     False
    manual:      True

executable atsfmt
    main-is:          Main.hs
    hs-source-dirs:   src
    other-modules:    Paths_ats_format
    default-language: Haskell2010
    other-extensions: OverloadedStrings TemplateHaskell
    ghc-options:      -Wall
    build-depends:
        base >=4.9 && <5,
        language-ats >=1.7.4.0,
        optparse-applicative -any,
        text -any,
        ansi-wl-pprint -any,
        directory -any,
        process -any,
        file-embed >=0.0.9,
        toml-parser -any

    if flag(development)
        ghc-options: -Werror

    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
