cabal-version: 2.0
name: ats-pkg
version: 3.1.0.2
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2018 Vanessa McHale
maintainer: vamchale@gmail.com
author: Vanessa McHale
tested-with: ghc ==8.4.3
bug-reports: https://github.com/vmchale/atspkg/issues
synopsis: A build tool for ATS
description:
    A collection of scripts to simplify building ATS projects.
category: Development, ATS
build-type: Simple
data-files:
    man/atspkg.1
extra-source-files:
    dhall/config.dhall
    dhall/atslib.dhall
    dhall/atspkg-prelude.dhall
extra-doc-files: README.md
                 docs/manual.tex

source-repository head
    type: git
    location: git@github.com:vmchale/atspkg.git

flag profile
    description:
        Enable profiling
    default: False
    manual: True

flag eventlog
    description:
        Enable event logging
    default: False
    manual: True

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
    exposed-modules:
        Language.ATS.Package
        Distribution.ATS
    hs-source-dirs: src
    other-modules:
        Paths_ats_pkg
        Distribution.ATS.Build
        Language.ATS.Package.Build
        Language.ATS.Package.Build.C
        Language.ATS.Package.Compiler
        Language.ATS.Package.Config
        Language.ATS.Package.Dependency
        Language.ATS.Package.Error
        Language.ATS.Package.Generic
        Language.ATS.Package.PackageSet
        Language.ATS.Package.Type
        Language.ATS.Package.Debian
        Distribution.ATS.Version
    autogen-modules:
        Paths_ats_pkg
    default-language: Haskell2010
    other-extensions: OverloadedStrings GADTs
                      GeneralizedNewtypeDeriving DeriveAnyClass DeriveGeneric
                      TemplateHaskell RecordWildCards TupleSections StandaloneDeriving
                      DerivingStrategies
    ghc-options: -Wall -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
    build-depends:
        base >=4.11 && <5,
        http-client -any,
        bytestring -any,
        file-embed -any,
        shake -any,
        bzlib -any,
        Cabal >=2.2.0.0,
        lzma -any,
        tar -any,
        zlib -any,
        http-client-tls -any,
        text -any,
        process -any,
        hashable -any,
        containers -any,
        parallel-io -any,
        mtl -any,
        dhall >=1.15.0,
        ansi-wl-pprint -any,
        shake-ats >=1.8.0.0,
        shake-ext >=3.0.0.0,
        shake-c >=0.4.0.0,
        zip-archive -any,
        ansi-wl-pprint -any,
        dependency >=1.2.0.0,
        filemanip -any,
        quaalude -any
    
    if flag(development)
        ghc-options: -Werror

library quaalude
    exposed-modules:
        Quaalude
    build-tools: cpphs -any
    hs-source-dirs: internal
    other-modules:
        System.Process.Ext
    default-language: Haskell2010
    build-depends:
        base -any,
        http-client -any,
        http-client-tls -any,
        process -any,
        directory -any,
        filepath -any,
        microlens -any,
        dhall -any,
        ansi-wl-pprint -any,
        shake -any,
        bytestring -any,
        composition-prelude >=1.3.0.3,
        binary -any,
        text -any,
        mtl -any
    
    if flag(development)
        cpp-options: -DDEBUG
    
    if !os(windows)
        build-depends:
            unix -any

executable atspkg
    main-is: Main.hs
    hs-source-dirs: app
    other-modules:
        Paths_ats_pkg
        Language.ATS.Package.Dhall
        Language.ATS.Package.Upgrade
    autogen-modules:
        Paths_ats_pkg
    default-language: Haskell2010
    other-extensions: OverloadedStrings
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
                 -with-rtsopts=-I0 -Wincomplete-uni-patterns
                 -Wincomplete-record-updates
    build-depends:
        base >=4.11,
        ats-pkg -any,
        optparse-applicative -any,
        shake-ats -any,
        microlens -any,
        temporary -any,
        directory -any,
        composition-prelude -any,
        text -any,
        parallel-io -any,
        quaalude -any,
        dependency -any,
        bytestring -any,
        shake -any,
        cli-setup -any
    
    if flag(eventlog)
        ghc-options: -eventlog -with-rtsopts=-l
    
    if flag(profile)
        ghc-options: -with-rtsopts=-h
    
    if flag(development)
        ghc-options: -Werror
