cabal-version:      2.0
name:               ats-pkg
version:            3.3.0.4
license:            BSD3
license-file:       LICENSE
copyright:          Copyright: (c) 2018-2019 Vanessa McHale
maintainer:         vamchale@gmail.com
author:             Vanessa McHale
tested-with:        ghc ==8.4.4 ghc ==8.6.5
bug-reports:        https://github.com/vmchale/atspkg/issues
synopsis:           A build tool for ATS
description:        A collection of scripts to simplify building ATS projects.
category:           Development, ATS
build-type:         Simple
data-files:         man/atspkg.1
extra-source-files:
    dhall/config.dhall
    dhall/atslib.dhall
    dhall/atspkg-prelude.dhall

extra-doc-files:
    README.md
    docs/manual.tex
    CHANGELOG.md

source-repository head
    type:     git
    location: git@github.com:vmchale/atspkg.git
    subdir:   ats-pkg

flag development
    description: Enable `-Werror`
    default:     False
    manual:      True

library
    exposed-modules:
        Language.ATS.Package
        Distribution.ATS

    build-tool-depends: cpphs:cpphs -any
    hs-source-dirs:     src
    other-modules:
        Paths_ats_pkg
        Distribution.ATS.Build
        Language.ATS.Package.Build
        Language.ATS.Package.Build.C
        Language.ATS.Package.Compiler
        Language.ATS.Package.Config
        Language.ATS.Package.Dependency
        Language.ATS.Package.Error
        Language.ATS.Package.PackageSet
        Language.ATS.Package.Type
        Language.ATS.Package.Debian
        Distribution.ATS.Version

    autogen-modules:    Paths_ats_pkg
    default-language:   Haskell2010
    other-extensions:
        OverloadedStrings GeneralizedNewtypeDeriving DeriveAnyClass
        DeriveGeneric TemplateHaskell RecordWildCards TupleSections
        StandaloneDeriving DerivingStrategies

    ghc-options:
        -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates

    build-depends:
        base >=4.10 && <5,
        http-client -any,
        bytestring -any,
        file-embed >=0.0.9,
        shake -any,
        bzlib -any,
        Cabal >=2.2.0.0,
        lzma -any,
        zlib -any,
        http-client-tls -any,
        text -any,
        process -any,
        containers -any,
        parallel-io -any,
        mtl -any,
        dhall >=1.15.0,
        ansi-wl-pprint -any,
        shake-ats >=1.10.2.0,
        shake-ext >=3.0.0.0,
        shake-c >=0.4.0.0,
        zip-archive -any,
        ansi-wl-pprint -any,
        dependency >=1.2.0.0,
        quaalude -any,
        tar -any,
        filemanip -any,
        unix-compat -any

    if flag(development)
        ghc-options: -Werror

library quaalude
    exposed-modules:  Quaalude
    hs-source-dirs:   internal
    other-modules:    System.Process.Ext
    default-language: Haskell2010
    build-depends:
        base -any,
        http-client -any,
        http-client-tls -any,
        process -any,
        directory >=1.2.3.0,
        filepath -any,
        microlens -any,
        ansi-wl-pprint -any,
        shake >=0.17,
        bytestring -any,
        composition-prelude >=1.3.0.3,
        binary -any,
        text -any,
        mtl -any,
        containers >=0.6

    if !impl(ghc >=8.4)
        build-depends: dhall >=1.27.0 && <1.25.0

    else
        build-depends: dhall >=1.27.0

    if flag(development)
        cpp-options: -DDEBUG

    if !os(windows)
        build-depends: unix -any

executable atspkg
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Paths_ats_pkg
        Language.ATS.Package.Dhall
        Language.ATS.Package.Upgrade

    autogen-modules:  Paths_ats_pkg
    default-language: Haskell2010
    other-extensions: OverloadedStrings
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -Wall -with-rtsopts=-I0
        -Wincomplete-uni-patterns -Wincomplete-record-updates

    build-depends:
        base >=4.10,
        ats-pkg -any,
        optparse-applicative -any,
        language-ats >=1.7.4.0,
        shake-ats -any,
        microlens -any,
        temporary -any,
        directory -any,
        text -any,
        parallel-io -any,
        quaalude -any,
        dependency -any,
        bytestring -any,
        shake -any,
        cli-setup -any,
        quaalude -any,
        dhall >=1.27.0

    if flag(development)
        ghc-options: -Werror
