name:                cdeps
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vmchale/cdeps#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2018 Vanessa McHale
--category:            Web
build-type:          Simple
extra-doc-files:     README.md
extra-source-files:  stack.yaml
                   , cabal.project.local
cabal-version:       1.18

Flag development {
  Description: Enable `-Werror`
  manual: True
  default: False
}

library
  hs-source-dirs:      src
  exposed-modules:     Language.C.Dependency
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , array
  build-tools:         alex
  default-language:    Haskell2010
  if flag(development)
    ghc-options:       -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  ghc-options:         -Wall

test-suite cdeps-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cdeps
                     , hspec
  if flag(development)
    ghc-options:       -Werror
  if impl(ghc >= 8.0)
    ghc-options:       -Wincomplete-uni-patterns -Wincomplete-record-updates
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/cdeps
