cabal-version: 1.18
name: cdeps
version: 0.1.1.7
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2018 Vanessa McHale
maintainer: vamchale@gmail.com
author: Vanessa McHale
synopsis: Extract dependencies from C code.
description:
    This package provides the ability to extract dependencies from C code, for use with [shake](https://shakebuild.com) or otherwise.
category: Development, C, Language
build-type: Simple
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com/vmchale/atspkg

flag development
    description:
        Enable `-Werror`
    default: False
    manual: True

library
    exposed-modules:
        Language.C.Dependency
    build-tools: alex -any
    hs-source-dirs: src
    default-language: Haskell2010
    other-extensions: OverloadedStrings
    ghc-options: -Wall
    build-depends:
        base >=4.8 && <5,
        text -any,
        bytestring -any,
        array -any,
        directory -any,
        filepath -any
    
    if flag(development)
        ghc-options: -Werror
    
    if !impl(ghc >=8.0)
        build-depends:
            transformers -any,
            semigroups -any
    
    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
    
    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

executable cdeps
    main-is: Main.hs
    hs-source-dirs: app
    other-modules:
        Paths_cdeps
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base >=4.11 && <5,
        cdeps -any,
        optparse-applicative -any
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
    
    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists

test-suite cdeps-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
    build-depends:
        base -any,
        cdeps -any,
        hspec -any
    
    if flag(development)
        ghc-options: -Werror
    
    if impl(ghc >=8.0)
        ghc-options: -Wincomplete-uni-patterns -Wincomplete-record-updates
    
    if impl(ghc >=8.4)
        ghc-options: -Wmissing-export-lists
